<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent" android:layout_height="match_parent">

    <!-- http://www.mindgrub.com/blog/matt-stanford/implementing-collapsing-toolbar-android-material-design -->

    <android.support.design.widget.AppBarLayout
        android:id="@+id/homeappbar"
        android:layout_width="match_parent" android:layout_height="wrap_content">
        <android.support.design.widget.CollapsingToolbarLayout
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/ExpandedTextAppearance"
            app:collapsedTitleTextAppearance="@style/CollapsedTextAppearance"
            android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                android:background="@color/colorPrimary"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="vertical" android:gravity="center"
                android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginTop="0dp" android:layout_marginBottom="5dp"
                    android:src="@drawable/banner" android:scaleType="centerInside"
                    android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="0dp">
                </ImageView>
                <android.support.v7.widget.SearchView
                    android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginBottom="4dp"
                    android:queryHint="@string/search"
                    android:background="@drawable/searchbackground"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                </android.support.v7.widget.SearchView>
                <View android:layout_marginTop="3dp" android:background="@color/colorLiteGray" android:layout_width="match_parent" android:layout_height="2dp"></View>
            </LinearLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/hometoolbar"
                app:layout_collapseMode="pin"
                android:background="#05000000"
                android:layout_width="match_parent" android:layout_height="?attr/actionBarSize">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/homeviewpager" android:layout_marginBottom="38dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent" android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="bottom" android:background="#FFFFFF"
        android:layout_width="match_parent" android:layout_height="wrap_content">
        <View android:background="@color/colorLiteGray" android:layout_width="match_parent" android:layout_height="2dp"></View>
        <LinearLayout
            android:orientation="horizontal" android:background="#FFFFFF"
            android:layout_width="match_parent" android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/homehomebutton"
                android:text="@string/all"
                android:ellipsize="end"
                android:drawableTop="@drawable/ic_home"
                android:stateListAnimator="@null"
                app:backgroundTint="@color/footer_button_tint"
                android:textColor="@color/footer_button_text_color"
                android:layout_weight=".25" android:layout_width="0dp" android:layout_height="match_parent">
            </android.support.v7.widget.AppCompatButton>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/homecommunitybutton"
                android:text="@string/community"
                android:ellipsize="end"
                android:drawableTop="@drawable/ic_communitys"
                android:stateListAnimator="@null"
                android:textColor="@color/footer_button_text_color"
                app:backgroundTint="@color/footer_button_tint"
                android:layout_weight=".25" android:layout_width="0dp" android:layout_height="match_parent">
            </android.support.v7.widget.AppCompatButton>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/homechatbutton"
                android:text="@string/chat"
                android:ellipsize="end"
                android:drawableTop="@drawable/ic_chat"
                android:stateListAnimator="@null"
                app:backgroundTint="@color/footer_button_tint"
                android:textColor="@color/footer_button_text_color"
                android:layout_weight=".25" android:layout_width="0dp" android:layout_height="wrap_content">
            </android.support.v7.widget.AppCompatButton>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/homegivebutton"
                android:text="@string/give"
                android:ellipsize="end"
                android:drawableTop="@drawable/ic_give"
                android:stateListAnimator="@null"
                app:backgroundTint="@color/footer_button_tint"
                android:textColor="@color/footer_button_text_color"
                android:layout_weight=".25" android:layout_width="0dp" android:layout_height="wrap_content">
            </android.support.v7.widget.AppCompatButton>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/homefab"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_add"
        app:backgroundTint="@color/colorPlum"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|end" android:layout_marginRight="@dimen/fab_margin" android:layout_marginBottom="64dp">
    </android.support.design.widget.FloatingActionButton>

</android.support.design.widget.CoordinatorLayout>
